[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["templates"]

[project]
name = "lmsi"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "unyt",
    "pydantic"
]

[project.scripts]
lmsi = "lmsi.cli:main"

[tool.ruff.lint]
extend-select = ["I"]